<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="wallpaper_settings" >

    <ListPreference
            android:key="theme_color"
            android:defaultValue="@string/default_theme_color"
            android:title="@string/theme_color_title"
            android:summary="@string/theme_color_summary"
            android:entries="@array/theme_colors"
            android:entryValues="@array/theme_colors" />
    
    <ListPreference
            android:key="theme_size"
            android:defaultValue="@string/default_theme_size"
            android:title="@string/theme_size_title"
            android:summary="@string/theme_size_summary"
            android:entries="@array/theme_sizes"
            android:entryValues="@array/theme_sizes" />
</PreferenceScreen>